# agentic-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
deep-researcher/: README.md
deep-researcher/evals/: test_planner_respects_clarifications.py
deep-researcher/src/: __init__.py  __main__.py  clarification.py  config.py  orchestrator.py  reporting.py  research.py  storage.py
deep-researcher/tests/: conftest.py  test_config.py  test_storage.py  test_wiring.py
sdr-agent/: README.md
sdr-agent/src/: __init__.py  __main__.py  config.py  delivery.py  drafting.py  orchestrator.py
sdr-agent/tests/: conftest.py  test_config.py  test_drafting.py  test_wiring.py
